@@ -57,6 +57,11 @@ function(pattern, x, ignore.case = FALSE, perl = FALSE,
     }
 }
 
+grepv <-
+function(pattern, x, ignore.case = FALSE, perl = FALSE,
+         value = TRUE, fixed = FALSE, useBytes = FALSE, invert = FALSE)
+    grep(pattern, x, ignore.case, perl, value, fixed, useBytes, invert)
+
 grepl <-
 function(pattern, x, ignore.case = FALSE, perl = FALSE,
          fixed = FALSE, useBytes = FALSE)
